<?xml version="1.0"?>
<package>
  <name>rosjava_core</name>
  <version>0.1.6</version>
  <description>
    An implementation of ROS in pure-Java with Android support.
  </description>
  <url>http://ros.org/wiki/rosjava_core</url>
  <maintainer email="damonkohler@google.com">Damon Kohler</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>
</package>

