<?xml version="1.0"?>
<package>
  <name>rosjava_core</name>
  <version>0.2.1</version>
  <description>
    An implementation of ROS in pure-Java with Android support.
  </description>
  <url>http://ros.org/wiki/rosjava_core</url>
  <maintainer email="damonkohler@google.com">Damon Kohler</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosjava_test_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <!-- 
    If genjava becomes official, drop rosjava_messages and depend directly.
    Currently only required to ensure deb builds generate the reqd artifacts
  -->
  <build_depend>rosjava_messages</build_depend>
</package>

