java_library(
    name = "rosjava",
    srcs = glob([
        "src/main/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//3rdparty/jvm/com/google/guava",
        "//3rdparty/jvm/dnsjava",
        "//3rdparty/jvm/io/netty",
        "//3rdparty/jvm/org/apache/commons:com_springsource_org_apache_commons_logging",
        "//3rdparty/jvm/org/apache/commons:com_springsource_org_apache_commons_net",
        "//3rdparty/jvm/org/ros/rosjava_messages:rosgraph_msgs",
        "//3rdparty/jvm/org/ros/rosjava_messages:std_msgs",
        "//apache_xmlrpc_client",
        "//apache_xmlrpc_common",
        "//apache_xmlrpc_server",
        "@com_github_rosjava_rosjava_bootstrap//message_generation",
    ],
)
